--- a/.github/workflows/deploy-to-glitch.yml
+++ b/.github/workflows/deploy-to-glitch.yml
@@ -9,7 +9,7 @@ jobs:
     - name: repo-sync
       uses: wei/git-sync@v1
       env:
-        SOURCE_REPO: "$GITHUB_SERVER_URL/$GITHUB_REPOSITORY.git"
+        SOURCE_REPO: "${{ env.GITHUB_SERVER_URL }}/${{ env.GITHUB_REPOSITORY }}.git"
         SOURCE_BRANCH: "main"
         DESTINATION_REPO: ${{ secrets.glitch_git_URL }}
         DESTINATION_BRANCH: "master"
