--- a/.github/workflows/deploy-to-glitch.yml
+++ b/.github/workflows/deploy-to-glitch.yml
@@ -6,12 +6,10 @@ jobs:
     if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
     steps:
-    - name: repo-sync
-      uses: wei/git-sync@v1
-      env:
-        SOURCE_REPO: "${{ env.GITHUB_SERVER_URL }}/${{ env.GITHUB_REPOSITORY }}.git"
-        SOURCE_BRANCH: "main"
-        DESTINATION_REPO: ${{ secrets.glitch_git_URL }}
-        DESTINATION_BRANCH: "master"
+    - name: git-sync
+      uses: wei/git-sync@v3
       with:
-        args: $SOURCE_REPO $SOURCE_BRANCH $DESTINATION_REPO $DESTINATION_BRANCH
+        source_repo: $GITHUB_REPOSITORY
+        source_branch: "main"
+        destination_repo: ${{ secrets.glitch_git_URL }}
+        destination_branch: "master"
